[workspace]
resolver = "3"
members = ["crates/mdm/*", "crates/focus/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/andrewgazelka/moonstone"

[workspace.dependencies]
# Error handling
color-eyre = "0.6"

# Async
tokio = { version = "1", features = ["full"] }

# Database
diesel = { version = "2", features = ["sqlite", "postgres", "r2d2", "chrono"] }
diesel_migrations = "2"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
plist = "1"

# Crypto
x509-parser = "0.17"
rustls = "0.23"
cms = "0.2"

# APNs
a2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
pem = "3"
urlencoding = "2"
trait-variant = "0.1"

# Internal crates
mdm-core = { path = "crates/mdm/core" }
mdm-storage = { path = "crates/mdm/storage" }
mdm-push = { path = "crates/mdm/push" }
mdm-service = { path = "crates/mdm/service" }
mdm-http = { path = "crates/mdm/http" }
mdm-crypto = { path = "crates/mdm/crypto" }
focus-agent = { path = "crates/focus/agent" }
focus-server = { path = "crates/focus/server" }

[profile.release]
lto = true
strip = true
