[package]
name = "mdm-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
x509-parser.workspace = true
cms.workspace = true
rustls.workspace = true
tracing.workspace = true
base64.workspace = true
pem.workspace = true
urlencoding.workspace = true
