[package]
name = "mdm-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
plist.workspace = true
mdm-core.workspace = true
mdm-service.workspace = true
mdm-storage.workspace = true
mdm-crypto.workspace = true
