[package]
name = "mdm-push"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
trait-variant.workspace = true
a2.workspace = true
uuid.workspace = true
mdm-core.workspace = true
mdm-storage.workspace = true
