[package]
name = "mdm-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
trait-variant.workspace = true
plist.workspace = true
mdm-core.workspace = true
mdm-storage.workspace = true
mdm-crypto.workspace = true
